...
    <string name="e_mail_error">E-mail address is incorrect</string>
    <string name="password_error">Password is incorrect</string>
    <string name="login">Sign in</string>
    <string name="forgot_password">I forgot my password</string>
    <string name="forgot_password_underline"><u>I forgot my password</u></string>
    <string name="forgot_password_info">Reset your password by entering your email address.</string>
    <string name="button_forgot_password">Send Reset Mail</string>
    <string name="good_morning">Good Morning</string>
    <string name="good_evening">Good Evening</string>
    <string name="good_night">Good Night</string>
    <string name="greetings">Greetings</string>
    <string name="notification">Notifications</string>
    <string name="show_less">Show less</string>
...
    <string name="change_photo">Change Photo</string>
    <string name="generic_change">Change</string>
    <string name="confirm_change">Confirm Change</string>

    <string name="change_photo_success">Profile photo is updated successfully</string>

    <string name="pool_car">flexiCar</string>
    <string name="pool_car_description">You can see available vehicles on your company</string>

    <string name="taxi_invoicing">Mileage Reporting</string>
    <string name="taxi_invoicing_description">You can report your past usage or initiate live usage</string>

    <string name="rent_a_car">Drive Now</string>
...
    <string name="total_km" translatable="false">%1$.2f km</string>
    <string name="date_day_hour_min">%1$d days %2$d h %3$d min</string>
    <string name="date_hour_min">%1$d h %2$d min</string>
    <string name="total_price">Total: %1$.2f TL</string>

    <string name="doors_opening_title">Vehicle Doors Opening!</string>
    <string name="doors_opening_info">Make sure you are within 10 meters of the car.</string>
    <string name="doors_opening_info_bottom">Once the car doors are opened, you will start renting and check for internal damage.</string>

    <string name="doors_closing_title">Vehicle doors are locking...</string>
    <string name="doors_closing_info">Your driving will be finished after the doors are locked.</string>
    <string name="doors_closing_info_bottom">Make sure you are 10 meters from the vehicle.</string>

    <string name="congratulations">Congratulations!</string>
    <string name="rental_start_successfully">Congratulations, your car rental request has been successfully completed. Your car is waiting for you.</string>
    <string name="redirecting_to_page">Redirecting.</string>

...
    <string name="damage_dialog_text1">Send pending damages?</string>

    <string name="description_empty">Please fill description field.</string>
    <string name="duty_locations_empty">Please fill duty location field.</string>
    <string name="vehicle_price_model_empty">Please select vehicle type.</string>

    <string name="rental_finish_fields_empty">Please fill in the fields.</string>

    <string name="rental_start_qr_title">Info</string>

    <string name="rental_start_qr_text">Your distance cannot be detected with the vehicle. Please go to the side of the vehicle and scan the QR code on the driver\'s door!</string>

    <string name="rental_start_qr_ok_button">Scan QR code</string>
...
    <string name="diesel">Diesel</string>
    <string name="gasoline">Gasoline</string>

    <string name="date_difference_error">There must be at least 30 minutes difference between start and end dates.</string>

    <string name="odometer_title_start">Start Km</string>
    <string name="odometer_text_start">Enter the km value of car when you get the car</string>
    <string name="odometer_title_end">Finish Km</string>
    <string name="odometer_text_end">Enter the km value of car when you leave the car</string>
    <string name="odometer_hint">Km Value</string>
    <string name="odometer_error">Please fill valid odometer value</string>

    <string name="error_vehicle_info">Vehicle info does not exists</string>
    <string name="odometer_does_not_exists">Odometer value does not exist</string>

    <string name="doors_opening_no_device">Driving Starts</string>
    <string name="doors_locking_no_device">Driving Finishes</string>

    <string name="doors_opening_no_device_text1">When the doors are opened, use will begin and you will be able to report internal damage in the first 5 minutes.</string>
    <string name="doors_locking_no_device_text1">Your use will be finished after the doors are locked.</string>

    <string name="find_car_key_text">Make sure you have the key before you start to inspections.</string>

    <string name="error_station">Parking Lot value can not found.</string>
    <string name="error_vehicle">Vehicle value can not found.</string>
    <string name="error_organization">Company value can not found.</string>
...
