...
        <variable
            name="viewModel"
            type="com.vektortelekom.android.vservice.ui.poolcar.PoolCarViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pool_car_rental_finish_control_fragment"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/paleGrey"
        android:clickable="true"
        tools:ignore="KeyboardInaccessibleWidget">
...
                            android:layout_height="1dp"
                            android:layout_marginTop="20dp"
                            app:layout_constraintTop_toBottomOf="@id/text_view_final_checks"
                            android:background="@color/paleGrey2"/>

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/check_box_1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toBottomOf="@id/view_divider"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:layout_marginTop="18dp"
...
                            android:minWidth="0dp"
                            android:minHeight="0dp"
                            tools:checked="true"
                            android:text="@string/final_checks_1"/>

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/check_box_2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toBottomOf="@id/check_box_1"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:paddingTop="7dp"
...
                            android:minWidth="0dp"
                            android:minHeight="0dp"
                            tools:checked="true"
                            android:text="@string/final_checks_2"/>

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/check_box_3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toBottomOf="@id/check_box_2"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:paddingTop="7dp"
...
                            android:minWidth="0dp"
                            android:minHeight="0dp"
                            tools:checked="true"
                            android:text="@string/final_checks_3"/>

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/check_box_confirm"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toBottomOf="@id/check_box_3"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
...
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/colorWhite">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_continue"
                style="@style/PrimaryButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
...
