...
        <variable
            name="viewModel"
            type="com.vektortelekom.android.vservice.ui.poolcar.PoolCarViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pool_car_rental_finish_park_info_fragment"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/paleGrey"
        android:clickable="true"
        tools:ignore="KeyboardInaccessibleWidget">
...
                            app:layout_constraintTop_toBottomOf="@id/view_divider"
                            app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginTop="10dp"
                            android:layout_marginStart="20dp">

                            <com.google.android.material.card.MaterialCardView
                                android:id="@+id/card_view_add_photo"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:layout_marginTop="10dp"
                                app:cardBackgroundColor="@color/colorWhite"
                                app:strokeColor="@color/paleGrey2"
                                app:strokeWidth="1dp"
...
                            android:textAppearance="@style/TextRegular"
                            android:textSize="14sp"
                            android:textColor="@color/darkNavyBlue"
                            android:text="@string/explanation"/>

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_text_description_park_info"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toBottomOf="@id/text_view_explanation_info"
                            android:layout_marginTop="15dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
...
                            android:minLines="3"
                            android:maxLines="3"
                            android:background="@drawable/bg_pale_grey_two_border_rounded_4dp"
                            android:text="@={viewModel.finishParkInfoDescription}"/>

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/check_box_confirm_park_info"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toBottomOf="@id/edit_text_description_park_info"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/colorWhite">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_finish_rental_park_info"
                style="@style/PrimaryButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
...
